problema immagini non visibili

--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
                 <p class="data_creazione_post">4 mesi fa</p>
             </div>    
             <p class="testo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui atque doloremque voluptatum eveniet quae perspiciatis obcaecati.</p>
-            <img src="https://unsplash.com/photos/t3ixVevEi6s" alt="" class="img">
-            <span id="like">mi piace</span>
-            <span id="total_likes">Piace a 80 persone</span>
+            <div class="hero_image">
+                <img src="https://unsplash.com/photos/t3ixVevEi6s" alt="" class="img">
+            </div>
+            <div class="likes">
+                <span id="like">mi piace</span>
+                <span id="total_likes">Piace a 80 persone</span>
+            </div>
         </div> -->
     </section>
     <script src="./assets/js/main.js"></script>
